<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">FaceEngineSample</string> -->
    <string name="action_settings">Settings</string>
    <string name="app_name">AssitantCam</string>
    <string name="takePicture">"촬영"</string>
    <string name="flash">"플래쉬" </string>
    <string name="pictureSize">"사진\n\r사이즈"</string>
    <string name="cameraMode">"카메라\n\r모드"</string>
    
    <!-- 공통 common string -->
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_notice">알림</string>

    <!-- 카메라 기본 설정 -->
    <string name="setting_title">설정</string>
    <string name="setting_save_type_title">촬영시 저장방식 설정</string>
    <string name="setting_shot_voice_guide_title">사진구도 음성가이드</string>
    <string name="setting_shot_mode">촬영모드</string>
    <string name="setting_detail_title">카메라 상세설정</string>
    <string name="setting_person_voice_guide">인물정보 음성안내제공</string>
    <string name="setting_weather_voice_guide_title">날씨정보 음성안내제공</string>
    <string name="setting_reset">초기화</string>
    <string name="setting_help">도움말</string>

    <!-- 촬영 모드 설정 -->
    <string name="setting_shot_mode_setting_title">촬영모드 설정</string>

    <!-- 인물정보 음성안내제공 설정 -->
    <string name="setting_person_voice_guide_setting_title">인물정보 음성안내제공 설정</string>

    <!-- 카메라 상세설정 -->
    <string name="setting_detail_voice_control">음성제어</string>
    <string name="setting_detail_flash">플래시</string>
    <string name="setting_detail_resolution">해상도</string>
    <string name="setting_detail_gps_tag">GPS태그</string>
    <string name="setting_detail_sound_button_title">음량버튼을 다음으로 설정</string>
    <string name="setting_detail_view_finder">뷰파인더 안내선 표시</string>
    <string name="setting_detail_save_place">저장소</string>

    <!-- 음성제어 설정 -->

    <string name="setting_detail_voice_control_title">음성제어 설정</string>

    <!-- 플레시 설정 -->
    <string name="setting_detail_flash_title">플래시 설정</string>

    <!-- 해상도 설정 -->
    <string name="setting_detail_resolution_title">해상도 설정</string>

    <!-- GPS태그 설정 -->
    <string name="setting_detail_gps_tag_title">GPS태그 설정</string>

    <!-- 뷰파인더 설정 -->
    <string name="setting_detail_view_finder_title">뷰파인더 안내선 표시 설정</string>

    <!-- 저장소 설정 -->
    <string name="setting_detail_save_place_title">저장소 설정</string>
    
    <!-- 초기화 메세지 -->
    <string name="setting_reset_message">설정상태를 모두 초기화 합니다.</string>
    
    <!-- photo view (촬영사진 확인, 사진 확인) -->
    <string name="gallery_photoview_shot_title">촬영사진 확인</string>
    <string name="gallery_photoview_detail_title">상세정보관리</string>
    <string name="gallery_photoview_detail_memo">메모</string>
    <string name="gallery_photoview_detail_recording">녹음하기</string>
    <string name="gallery_photoview_detail_recording_play">녹음재생</string>
    <string name="gallery_photoview_detail_recording_delete">녹음삭제</string>
    <string name="gallery_photoview_detail_categoty">카테고리설정</string>
    <string name="gallery_photoview_detail_soundshot_play">사운드&amp;샷 재생</string>
    <string name="gallery_photoview_photolist">사진리스트</string>
    <string name="gallery_photoview_share">공유</string>

</resources>