<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="283dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_popup2"
    android:minHeight="171dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/alert_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/common_notice"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/alert_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="87dp"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/alert_dialog_ok"
            android:layout_width="127dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_custom_alert_dialog"
            android:text="@string/common_ok"
            android:textColor="@drawable/text_custom_alert_dialog" />

        <Button
            android:id="@+id/alert_dialog_cancel"
            android:layout_width="127dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btn_custom_alert_dialog"
            android:text="@string/common_cancel"
            android:textColor="@drawable/text_custom_alert_dialog" />
    </LinearLayout>

</LinearLayout>