<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/title_bg" >

            <TextView
                android:id="@+id/camera_setting_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="17dp"
                android:gravity="center_vertical"
                android:text="@string/setting_title"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/camera_setting_save"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_titlebar_ok" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/camera_setting_save"
                android:src="@drawable/title_divide" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/camera_setting_save_type"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <!-- android:background="@drawable/custom_camera_setting_list_row_back" -->

                    <TextView
                        android:id="@+id/camera_setting_save_type_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_save_type_title"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_setting_save_type_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_shot_voice_guide"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_shot_voice_guide_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_shot_voice_guide_title"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_setting_shot_voice_guide_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_shot_mode"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_shot_mode_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_shot_mode"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_setting_shot_mode_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_detail"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_title"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_person_voice_guide"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_person_voice_guide_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_person_voice_guide"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_setting_person_voice_guide_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_weather_voice_guide"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_weather_voice_guide_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_weather_voice_guide_title"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_setting_weather_voice_guide_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_reset"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_reset_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_reset"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_setting_help"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_setting_help_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_help"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>