<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/title_bg" >

            <TextView
                android:id="@+id/camera_detail_setting_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="17dp"
                android:gravity="center_vertical"
                android:text="@string/setting_detail_title"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/camera_detail_setting_save"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_titlebar_ok" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/camera_detail_setting_save"
                android:src="@drawable/title_divide" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_voice_control"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_voice_control_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_voice_control"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_voice_control_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_flash"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_flash_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_flash"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_flash_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_resolution_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_resolution"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_resolution_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_gps_tag"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_gps_tag_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_gps_tag"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_gps_tag_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_sound_button"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_sound_button_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_sound_button_title"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_sound_button_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_view_finder"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" >

                    <TextView
                        android:id="@+id/camera_detail_setting_view_finder_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_view_finder"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_view_finder_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />

                <RelativeLayout
                    android:id="@+id/camera_detail_setting_save_place"
                    android:layout_width="match_parent"
                    android:layout_height="65dp" 
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/camera_detail_setting_save_place_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/setting_detail_save_place"
                        android:textColor="@drawable/custom_camera_setting_list_row_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/camera_detail_setting_save_place_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="17dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@drawable/custom_camera_setting_list_row_value_text"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#6e7172" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>